--- a/The_Modern_JS/Promise/Callbacks/index.html
+++ b/The_Modern_JS/Promise/Callbacks/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div class="demo"></div>
-    <script src="script.js"></script>
+    <script src="callBack.js"></script>
 </body>
 </html>
